Prepare profile platform demo for interview showcase